frame/support/test/tests/pallet_ui/error_003.stderr
error: expected `Error`
  --> $DIR/error_003.rs:19:11
   |
19 |     pub enum Foo<T> {}
   |              ^^^
